--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "socket.io-client": "^4.5.3",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
+    "vue3-cookies": "^1.0.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
